$Id$

2015-02-08  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: Buffalo Drivestation Duo (0x0411:0x01ce)
	- USB: Toshiba Canvio Basics (0x0480:0x0201, 0xa00d)
	- USB: Toshiba Stor.E Basics (0x0480:0xa00c)
	- USB: Toshiba Canvio ALU (0x0480:0xa100)
	- USB: Toshiba Canvio Desktop (0x0480:0xd000)
	- USB: Samsung S2 Portable (0x04e8:0x1f0a)
	- USB: Samsung S3 Portable (0x04e8:0x61c8)
	- USB: LaCie Rugged Triple Interface (0x059f:0x100c)
	- USB: Initio (0x13fd:0x3910)
	- USB: ASMedia (0x174c:0x5516)
	- USB: Innostor IS611 (0x1f75:0x0611)

2015-02-02  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: Seagate FreeAgent XTreme (0x0bc2:0x3101)
	- USB: Seagate Expansion Portable (0x0bc2:0x232[01])
	- USB: Seagate Expansion External (0x0bc2:0x3321)
	- USB: Seagate FreeAgent GoFlex (0x0bc2:0x5070, 0x50a7, 0x6121)
	- USB: Seagate Slim Portable Drive (0x0bc2:0xab00) (ticket #517)
	- USB: Seagate Backup Plus Slim (0x0bc2:0xab21)
	- USB: ADATA HD650 (0x125f:0xa35a)
	- USB: JMicron JMS567 (0x152d:0x3562) (ticket #508)
	- USB: Innostor IS621 (0x1f75:0x0621) (ticket #517)

2015-01-25  Christian Franke  <franke@computer.org>

	drivedb.h:
	- JMicron based SSDs: Transcend SSD340 (ticket #348)
	- SiliconMotion based SSDs: Transcend SSD370 (ticket #468)

2015-01-24  Christian Franke  <franke@computer.org>

	os_win32.cpp: Add Windows 10 to get_os_version_str().

2015-01-01  Christian Franke  <franke@computer.org>

	Happy New Year! Update copyright year in version info.

2014-12-13  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: SanDisk SDCZ80 Flash Drive (0x0781:0x5580)
	- USB: WD My Passport: Merge entries, add 0x1058:0x0810
	- USB: WD Elements Desktop: Merge entries, add 0x1058:0x107c
	- USB: WD Elements: Merge entries
	- USB: JMicron JMS539 (0x152d:0x0539): 2.06 and 28.03 support SAT
	  (ticket #504)
	- USB: JMicron JMS567 (0x152d:0x0567) (ticket #504)
	- USB: JMicron JMS566 (0x152d:0x2566)
	- USB: Hitachi Touro (0x4971:0x1014)
